# Data-Collection-Storage-Foundation

./: README.md  SETUP_GUIDE.md  product_crawler.py  pyproject.toml  summary.metadata.json
output/: product_crawl_state.json  product_details.bson  product_details.json  unique_product_ids.json
