[project]
name = "data-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "ip2location (>=8.11.0,<9.0.0)",
    "selenium (>=4.36.0,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]

[tool.poetry]
packages = [{include = "data_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
